# homo-habbits

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  clippy.toml  deny.toml  docker-compose.yml  env.example  package.json  rustfmt.toml
.github/workflows/: ci.yml
config/environments/: development.toml
config/semantic/: domain_models.toml
core/anti_algorithm/: Cargo.toml
core/anti_algorithm/examples/: bmd_consciousness_demo.rs  neurolinguistic_demo.rs
core/anti_algorithm/src/: convergence.rs  emergence.rs  femtosecond.rs  lib.rs  noise.rs  s_entropy.rs  solver.rs  types.rs
core/anti_algorithm/src/s_entropy/: bmd_consciousness_integration.rs  endpoint_detector.rs  navigator.rs  neurolinguistic_integration.rs  oscillator_processor.rs  ridiculous_generator.rs  tri_dimensional.rs  types.rs  viability_checker.rs
docs/: borgia.md  communication-protocol.md  consious-processes.md  digitial-preservation.md  foundry.md  noise-algorithm.md  photon.md  solvability.md  structure.md  teleportation.md
scripts/dev/: setup.sh
