[workspace]
members = [
    "core/semantic",
    "core/identity", 
    "core/bmds",
    "core/engine",
    "ai_integration/context_injection",
    "ai_integration/platforms/openai",
    "ai_integration/platforms/anthropic", 
    "ai_integration/platforms/google",
    "ai_integration/platforms/local_models",
    "ai_integration/enhancement",
    "commercial/matching",
    "commercial/optimization", 
    "commercial/pricing",
    "privacy/ephemeral",
    "privacy/disclosure",
    "privacy/security",
    "backend/api",
    "backend/services/semantic_processor",
    "backend/services/identity_manager",
    "backend/services/ai_integrator", 
    "backend/services/commercial_optimizer",
    "modeling/multi_model",
    "modeling/domain_extraction",
    "modeling/quality_assessment",
    "modeling/distributed",
    "turbulance_integration/parser",
    "turbulance_integration/operations",
    "turbulance_integration/learning",
    "tools/semantic_debugger",
    "tools/performance_profiler",
    "tools/privacy_auditor",
    "tools/data_generators"
]

[workspace.package]
name = "homo-habits"
version = "0.1.0"
edition = "2021"
authors = ["Homo-Habits Team <team@homo-habits.com>"]
description = "Semantic digital identity system for habit tracking and contextual AI optimization"
license = "MIT"
repository = "https://github.com/homo-habits/monkey-tail"
homepage = "https://homo-habits.com"
keywords = ["semantic", "identity", "habits", "ai", "privacy"]
categories = ["web-programming", "science", "authentication"]

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async and networking
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
axum = { version = "0.7", features = ["ws", "headers"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database and storage  
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "json"] }

# Cryptography and privacy
ring = "0.17"
rand = "0.8"
argon2 = "0.5"
sha2 = "0.10"

# Machine learning and semantic processing
candle = { git = "https://github.com/huggingface/candle.git", features = ["mkl"] }
tokenizers = "0.15"
ndarray = "0.15"
nalgebra = "0.32"

# Configuration and environment
config = "0.14"
dotenvy = "0.15"

# Web and API
hyper = { version = "1.0", features = ["full"] }
mime = "0.3"

# Testing
proptest = "1.4"
wiremock = "0.5" 